# patent-preexam-system

./: .gitignore  AGENTS.md  BUILD.md  Makefile  README.md  pyproject.toml  run_preexam.py  setup.cfg
.github/workflows/: build-windows.yml
rules/: check_rules.yaml  cnipa_file_mapping.yaml  commitment_rules.yaml  formal_check_rules.yaml
src/preexam/: __init__.py  archive.py  case_id_extractor.py  case_manager.py  cli.py  cnipa_xml.py  commitment.py  config.py  logging_utils.py  manifest.py  prompt_builder.py  report_generator.py  rules_engine.py  ui_streamlit.py
templates/: prompt_01_file_commitment.md  prompt_02_formal_claims.md  prompt_03_patentability.md  prompt_04_opinion.md
tests/: test_case_id_extractor.py  test_cnipa_xml.py  test_manifest.py  test_manifest_enhanced.py  test_no_overwrite_report.py  test_report_generator.py  test_rules_engine.py
