[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "patent-preexam-system"
version = "0.1.0"
description = "专利快速预审案卷辅助审查系统 - 第一阶段：案卷预处理与结构化数据生成"
requires-python = ">=3.10"
dependencies = [
    "pyyaml>=6.0",
    "lxml>=5.0",
    "pillow>=10.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-v --tb=short"
